Add back stoploss threshold

--- a/config.json.example
+++ b/config.json.example
@@ -9,5 +9,6 @@
   "leverage": "Leverage of the order",
   "size": "Order size. Must be a positive number",
   "resolution": "kline resolution,count by minute,such as 60,it means 60min(1h) kline",
-  "valve": "valve"
+  "valve": "valve",
+  "stop_loss_threshold": ".01"
 }
