--- a/config.json.example
+++ b/config.json.example
@@ -10,5 +10,6 @@
   "size": "Order size. Must be a positive number",
   "resolution": "kline resolution,count by minute,such as 60,it means 60min(1h) kline",
   "valve": "valve",
-  "stop_loss_threshold": ".01"
+  "stop_loss_threshold": ".01",
+  "stop_win_threshold": ".005"
 }
